actualizacion: logica de analisis energetico, persistencia y guia de ejecucion